--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DB_URL=mongodb://localhost:27017/db
-SALT_ROUNDS=10
-SECRET=$somerandomkey$
+NODE_ENV=development
+REDIS_PASSWORD=YourRedisPassword
+SECRET=$randomSecretKey$
