--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ayush Poddar <ayush_poddar@live.com>",
   "license": "MIT",
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "app-root-path": "^2.2.1",
     "bcrypt": "^3.0.6",
     "bluebird": "^3.7.1",
@@ -32,7 +33,8 @@
   },
   "scripts": {
     "start": "DEBUG=app:* nodemon server.js",
-    "test": "NODE_ENV=testing DEBUG=test:* mocha test/**/*.js --exit"
+    "test": "NODE_ENV=testing DEBUG=test:* mocha test/**/*.js --exit",
+    "lint": "eslint --fix-dry-run ."
   },
   "devDependencies": {
     "eslint": "^6.5.1",
